package edu.fiuba.algo3.entrega_1;

public interface TipoVF {
    public int devolverPuntaje(Boolean acierta);
}